# a

./: .env.example  .gitattributes  .gitignore  .lfsconfig  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  flake.nix  mypy.ini  pyproject.toml
airgap/: build_wheelhouse.py  compose.airgap.yml  load_images.sh  save_images.sh
app/: __init__.py  main.py
artifacts/: config_lint.json  import_hygiene.json  limit_status.json  model_state_candidate.json  sbom.json  schema_diff.json  signature.txt  version_manifest.json
attest/: __init__.py
canary/: stats.py
console/: index.html  styles.css
data/: sample_transactions.csv
dockerfiles/: api.Dockerfile  bytewax.Dockerfile  screenshot.Dockerfile
docs/: offline_changelog.md  schema_migrations.md
feature_repo/: feature_store.yaml  transactions.py
graph/: centrality.py  engine.py  ppr.py
offline/: datasets.py  evaluate.py  train_model.py
policy/: admission.rego  decision_override.rego
quality/: expectations.py
rules/: baseline.yaml
scenarios/: card_testing.yaml
scripts/: avro_canonical_gate.py  backup_redis.py  backup_redpanda.py  bom_closure.py  burn_rate_gate.py  caps_check.py  capture_screens.py  case_collision_gate.py  ci_print_env.py  clock_drift_check.py  compose_health.py  config_lint.py  deprecation_gate.py  diag_bundle.py  diffoscope_report.py  disk_fill_tester.py  docs_verify.py  doctor.py  drift_check.py  dual_write_backfill.py  dual_write_cutover.py  egress_gate.py  flags_gate.py  flake_detector.py  forbidden_api_allowlist.json  forbidden_api_gate.py  forecast_retrain.py  gen_clients.py  gen_scenarios.py  generate_sbom.py  git_hygiene_gate.py  golden_check.py  hdr_compare.py  import_hygiene.py  import_hygiene_allowlist.json  (+37 more)
(+217 files in other folders)
