[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aegisflux"
version = "0.2.0"
description = "Air-gapped realtime fraud defense with deterministic online learning and governance."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["fraud", "streaming", "online-learning", "bytewax", "fastapi", "feast"]
authors = [{ name = "Alan Uriel Saavedra Pulido", email = "alanursapu@gmail.com" }]
license = { text = "Apache-2.0" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.1",
  "kafka-python==2.0.2",
  "bytewax==0.19.2",
  "feast==0.43.1",
  "redis==5.0.4",
  "pydantic==2.7.1",
  "pydantic-settings==2.2.1",
  "pandas==2.2.2",
  "numpy==1.26.4",
  "pyarrow==15.0.2",
  "orjson==3.10.3",
  "python-dotenv==1.0.1",
  "rich==13.7.1",
  "jinja2==3.1.3",
  "jsonschema==4.22.0",
  "httpx==0.27.0",
  "PyYAML==6.0.1",
  "duckdb==0.10.2",
  "cryptography==42.0.5"
]

[project.urls]
Homepage = "https://example.com/aegisflux"
Repository = "https://github.com/example/aegisflux"
Documentation = "https://example.com/aegisflux/docs"

[project.optional-dependencies]
dev = [
  "pytest==8.2.2",
  "pytest-asyncio==0.23.7",
  "hypothesis==6.99.9",
  "ruff==0.4.4",
  "mypy==1.10.0",
  "schemathesis==3.25.5",
  "types-PyYAML==6.0.12.20240311"
]

[tool.ruff]
select = ["E", "F", "I", "N", "UP", "B", "C4"]
line-length = 100

[tool.ruff.isort]
known-first-party = ["app", "streaming", "offline"]
